Fixed spacing between category and brand on mobile

--- a/sites/all/themes/main/sass/components/_search_filter.scss
+++ b/sites/all/themes/main/sass/components/_search_filter.scss
@@ -195,6 +195,10 @@
   .categories {
     margin-bottom: 15/18*1em;
 
+    @media all and (min-width: $media_luke) {
+      margin-bottom: 0;
+    }
+
     .title {
       margin-right: 40/18*1em;
     }
